# ith-webapp

./: .gitignore  AGENTS.md  Dockerfile  LOCAL_SETUP.md  README.md  alembic.ini  cloudbuild.yaml  firebase.json  progress.txt  pyproject.toml  start.sh
adr/: 001-2026-04-19-technology-selection.md  002-2026-04-19-alembic-migration-setup.md  002-2026-04-20-cloud-run-and-firebase-hosting-deployment.md  003-2026-04-19-customer-crud-implementation.md  004-2026-04-19-customer-delete-route.md  005-2026-04-19-customer-address-management.md  006-2026-04-19-customer-contact-model.md  007-2026-04-19-customer-communication-log-model.md  008-2026-04-19-customer-market-assignment-model.md  009-2026-04-19-customer-application-and-specs-models.md  010-2026-04-19-customer-tools-model.md  011-2026-04-19-lookup-table-model-pattern.md  012-2026-04-19-check-in-sub-model-and-workflow.md  013-2026-04-19-service-model-and-table.md  014-2026-04-19-service-sub-model-and-table.md  015-2026-04-19-service-time-tracking-model.md  016-2026-04-19-service-measurements-model.md  017-2026-04-19-service-flag-models.md  018-2026-04-19-quote-calculation-methods.md  019-2026-04-19-service-follow-up-chain-workflow.md  020-2026-04-19-service-sub-copy-quote-snapshots.md  021-2026-04-19-packinglistsub-model-and-export-compliance.md  022-2026-04-19-packing-list-workflow-views.md  023-2026-04-19-packing-list-header-model.md  024-2026-04-19-parts-master-model.md  025-2026-04-19-parts-sold-history-subresource.md  026-2026-04-19-consignment-list-model-and-crud.md  027-2026-04-19-field-service-model-and-crud.md  (+72 more)
(+218 files in other folders)
